# Lunabotics2024-ROS

./: .gitignore  Acknowledgements.MD  README.md  config_jazzy.sh  config_jazzy_noVSCODE.sh  dashboard_tools.txt  imgui_dashboard_example.txt  install_all_dependencies.sh  install_humble.sh  install_humble_vscode.sh  notepad.txt  run.sh  teleop_button_layout.txt  teleop_steps.txt  test_install_realsense.sh  tools_march18.txt
docs/: Doxyfile
docs/html/: annotated.html  classMotorControllerGroup-members.html  classMotorControllerGroup.html  classTeleop__Control-members.html  classTeleop__Control.html  classTeleop__Control__coll__graph.map  classTeleop__Control__coll__graph.md5  classTeleop__Control__inherit__graph.map  classTeleop__Control__inherit__graph.md5  classTeleop__Control_a0088b1dc38c2da500098659975638980_icgraph.map  classTeleop__Control_a0088b1dc38c2da500098659975638980_icgraph.md5  classTeleop__Control_a01d088abe449ed0cc43bae2e2f03d185_icgraph.map  classTeleop__Control_a01d088abe449ed0cc43bae2e2f03d185_icgraph.md5  classTeleop__Control_a13319932c32185416942861865c94260_cgraph.map  classTeleop__Control_a13319932c32185416942861865c94260_cgraph.md5  classTeleop__Control_a13319932c32185416942861865c94260_icgraph.map  classTeleop__Control_a13319932c32185416942861865c94260_icgraph.md5  classTeleop__Control_a492615da50fae67bceb5c5c3ebb1fe69_cgraph.map  classTeleop__Control_a492615da50fae67bceb5c5c3ebb1fe69_cgraph.md5  classTeleop__Control_a4a4e33b91e385294462adf5507bd7ab3_icgraph.map  classTeleop__Control_a4a4e33b91e385294462adf5507bd7ab3_icgraph.md5  classTeleop__Control_a67ddf642fdc6fc0730b7c4ff5e1eaf45_icgraph.map  classTeleop__Control_a67ddf642fdc6fc0730b7c4ff5e1eaf45_icgraph.md5  classTeleop__Control_a6f24f17316a4a9b6f1a77d21e49a5326_icgraph.map  classTeleop__Control_a6f24f17316a4a9b6f1a77d21e49a5326_icgraph.md5  classTeleop__Control_a7893cf6649ccd2e9c900fd9d8bb8f92c_cgraph.map  classTeleop__Control_a7893cf6649ccd2e9c900fd9d8bb8f92c_cgraph.md5  classTeleop__Control_a9c391a2fd9a145eb03449274e734cdf6_cgraph.map  classTeleop__Control_a9c391a2fd9a145eb03449274e734cdf6_cgraph.md5  classTeleop__Control_a9c391a2fd9a145eb03449274e734cdf6_icgraph.map  classTeleop__Control_a9c391a2fd9a145eb03449274e734cdf6_icgraph.md5  classTeleop__Control_a9c48dffe8bad47d52cac7128aaea6035_icgraph.map  classTeleop__Control_a9c48dffe8bad47d52cac7128aaea6035_icgraph.md5  classTeleop__Control_ad327d0210dd5fbbab04b07a2c952f00c_icgraph.map  classTeleop__Control_ad327d0210dd5fbbab04b07a2c952f00c_icgraph.md5  classTeleop__State__Manager-members.html  classTeleop__State__Manager.html  classTeleop__State__Manager__coll__graph.map  classTeleop__State__Manager__coll__graph.md5  classTeleop__State__Manager__inherit__graph.map  (+57 more)
docs/latex/: annotated.tex  classMotorControllerGroup.tex  classTeleop__Control.tex  classTeleop__Control__coll__graph.md5  classTeleop__Control__inherit__graph.md5  classTeleop__Control_a0088b1dc38c2da500098659975638980_icgraph.md5  classTeleop__Control_a01d088abe449ed0cc43bae2e2f03d185_icgraph.md5  classTeleop__Control_a13319932c32185416942861865c94260_cgraph.md5  classTeleop__Control_a13319932c32185416942861865c94260_icgraph.md5  classTeleop__Control_a492615da50fae67bceb5c5c3ebb1fe69_cgraph.md5  classTeleop__Control_a4a4e33b91e385294462adf5507bd7ab3_icgraph.md5  classTeleop__Control_a67ddf642fdc6fc0730b7c4ff5e1eaf45_icgraph.md5  classTeleop__Control_a6f24f17316a4a9b6f1a77d21e49a5326_icgraph.md5  classTeleop__Control_a7893cf6649ccd2e9c900fd9d8bb8f92c_cgraph.md5  classTeleop__Control_a9c391a2fd9a145eb03449274e734cdf6_cgraph.md5  classTeleop__Control_a9c391a2fd9a145eb03449274e734cdf6_icgraph.md5  classTeleop__Control_a9c48dffe8bad47d52cac7128aaea6035_icgraph.md5  classTeleop__Control_ad327d0210dd5fbbab04b07a2c952f00c_icgraph.md5  classTeleop__State__Manager.tex  classTeleop__State__Manager__coll__graph.md5  classTeleop__State__Manager__inherit__graph.md5  classTestTeleopControl.tex  classTestTeleopControl__coll__graph.md5  files.tex  hierarchy.tex  index.tex  md__home_jayhaych02_robotics_Lunabotics2024_ROS_src_robot_testing_README.tex  refman.tex  structROBOTSTATE__t.tex  structROBOT__ACTUATION__t.tex  structROBOT__LIMITS__t.tex  structXBOX__JOYSTICK__INPUT__t.tex  teleop__control_8cpp.tex  teleop__control_8cpp__incl.md5  teleop__state__manager_8cpp.tex  teleop__state__manager_8cpp__incl.md5  todo.tex
install/: local_setup.sh  setup.sh
log/: latest_build  latest_list
src/: joy_mappings.txt
src/mining_bot_autonomous/: CMakeLists.txt  package.xml
src/mining_bot_base/: CMakeLists.txt  diffdrive_turobotics.xml
src/mining_bot_base/src/robot_launch/: CMakeLists.txt  package.xml
src/mining_bot_base/src/robot_launch/launch/: teleop.launch.py
src/mining_bot_base/src/teleop_controller/: CMakeLists.txt
src/mining_bot_base/src/teleop_controller/src/: teleop_Digging.cpp  teleop_Drivebase.cpp  teleop_State_Manager.cpp  teleop_controller.cpp
src/nt_py/: package.xml  setup.cfg  setup.py
src/robot_launch/: CMakeLists.txt  package.xml
src/robot_launch/launch/: teleop.launch.py
src/robot_launch/scripts/: start_teleop.sh
src/robot_testing/: CMakeLists.txt  README.md  package.xml
src/robot_testing/tests_teleop/: test_teleop_control.cpp
src/teleop_controller/: ARCHITECTURE.md  CMakeLists.txt  CTestConfiguration.ini  JAVA_DOCS.md  package.xml  teleop_controller.cpp  teleop_digging.cpp  teleop_drivebase.cpp  thoughts.txt
src/teleop_controller/include/: Digging.hpp  DiggingBelt.hpp  DiggingLeadscrew.hpp  Dumping.hpp  MotorControllerGroup.hpp  core.hpp
src/teleop_controller/src/: ActivateMode.cpp  Camera.cpp  DashboardViz.cpp  Digging.cpp  DiggingBelt.cpp  DiggingLeadscrew.cpp  DrivebaseControl.cpp  Dumping.cpp  KIllCommunication.cpp  MotorControllerGroup.cpp  PIDTuner.cpp  Viz.cpp  logfile.txt  teleop_control.cpp  teleop_drivebase.cpp  teleop_dumping.cpp  teleop_mining.cpp  teleop_state_manager.cpp
src/teleop_controller/src/viz/: CMakeLists.txt
src/teleop_controller/src/viz/src/: gui.cpp  gui.h  main.cpp
src/teleop_controller/srv/: SetParameter.srv  SwitchMode.srv
(+67 files in other folders)
